# website/src/routes/[teamID]/incidents/new/+page.ts
@@ -1,0 +1,16 @@
+import { getMonitors } from '$lib/api/monitor';
+import type { Monitor } from '../../../../types';
+import type { PageLoad } from './$types';
+
+export type NewIncidentPageData = {
+	monitors: Monitor[];
+};
+
+export const load: PageLoad<NewIncidentPageData> = async ({ params }) => {
+	const { teamID } = params;
+	const monitorsRes = await getMonitors(teamID);
+
+	return {
+		monitors: monitorsRes.data ?? []
+	};
+};
